fix title line spacing - again.

--- a/index.css
+++ b/index.css
@@ -332,7 +332,7 @@
   .blog_post-wrapper .blog_posts .title-wrapper h2 {
     font-size: 2em;
     margin-bottom: 10px;
-    line-height: 1.8;
+    line-height: 1.4;
   }
   
   .meta {
